--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       --accent: #222;
       --bg: #ebebeb;
       --highlight: #eee;
-      --mail-gradient: #ccc;
-      --linkedin-gradient: #ccc;
-      --instagram-gradient: #ccc;
+      --mail-gradient: linear-gradient(135deg, #ddd, #f0f0f0);
+      --linkedin-gradient: linear-gradient(135deg, #ddd, #f0f0f0);
+      --instagram-gradient: linear-gradient(135deg, #ddd, #f0f0f0);
     }
     body {
   padding-top: 80px;
