--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ header h1:hover {
     <p class="under-construction">🚧 Under construction 🚧</p>
   </section>
   <footer>
-    &copy; 2025 Jonathan Pedrero.
+    &copy; 2025 Jonathan Pedrero
   </footer>
   <script>
     const headerFooterDelay = 2600;
