--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
     body {
   padding-top: 80px;
-  background: linear-gradient(to bottom, #f8f8f8, #eeeeee, #e0e0e0, #d1d1d1, #c2c2c2, #b3b3b3, #a4a4a4, #969696);
+  background: linear-gradient(to bottom, #fafafa, #e2e2e2, #c6c6c6, #a4a4a4, #888888, #6a6a6a, #4e4e4e, #383838);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -363,7 +363,7 @@ header h1:hover {
 <span id="terminal-typewriter"></span><span id="terminal-input" contenteditable="true" spellcheck="false" style="outline: none; display: inline-block; min-width: 1ch;" oninput="if(this.innerText.length > 12) this.innerText = this.innerText.slice(0, 12);"></span>
       </div>
     </div>
-    <div class="divider" style="background-color: #666;"></div>
+    <div class="divider" style="background-color: #2b2b2b;"></div>
     <div id="role-text"></div>
     <div class="mobile-spacer"></div>
   </section>
