--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
     body {
   padding-top: 80px;
-  background: linear-gradient(to bottom, #fafafa, #e2e2e2, #c6c6c6, #a4a4a4, #888888, #6a6a6a, #4e4e4e, #383838);
+  background: linear-gradient(to bottom, #ffffff, #eaeaea, #d4d4d4, #b8b8b8, #9c9c9c, #808080, #646464, #4a4a4a);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -67,13 +67,12 @@
       font-size: 1.2rem;
       padding: 0.25rem 0.5rem;
       border-radius: 4px;
-      transition: background 0.2s ease-in-out, transform 0.2s ease-in-out;
+      transition: background 0.5s ease-in-out, transform 0.5s ease-in-out;
       color: #ebebeb;
       text-decoration: none;
       font-weight: 500;
-    
       background-color: transparent;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.5s ease;
     }
     nav a.active {
       border-bottom: 3px solid #fff;
@@ -81,7 +80,7 @@
     }
     nav a:hover {
       background-color: #555;
-      transform: translateY(-2px);
+      transform: scale(1.15) translateY(-2px);
     }
     .hero {
       padding: 1.5rem 2rem 0.75rem;
