--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jonathan Pedrero</title>
+  <title>JP</title>
     <style>
     :root {
       --primary: #000;
