--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JP</title>
+  <title>Jonathan Pedrero</title>
     <style>
     :root {
       --primary: #000;
@@ -338,7 +338,7 @@ header h1:hover {
   <header>
     <div style="display: flex; align-items: center; gap: 0.75rem;">
       <img src="JP.png" alt="Jonathan Pedrero headshot" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;">
-      <h1 id="header-name">Jonathan Pedrero</h1>
+      <h1 id="header-name">JP</h1>
     </div>
     <nav>
       <a href="#home">Home</a>
