--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ header h1:hover {
   <header>
     <div style="display: flex; align-items: center; gap: 0.75rem;">
       <img src="JP.png" alt="Jonathan Pedrero headshot" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;">
-      <h1 id="header-name">JP</h1>
+      <h1 id="header-name">Jonathan Pedrero</h1>
     </div>
     <nav>
       <a href="#home">Home</a>
